# bucktrader

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
bucktrader/: __init__.py  analyzer.py  broker.py  calendar.py  comminfo.py  cortex.py  dataseries.py  feed.py  fillers.py  indicator.py  lineseries.py  logutils.py  metabase.py  observer.py  order.py  plot.py  position.py  signal.py  strategy.py  timer.py  trade.py  writer.py
bucktrader/analyzers/: __init__.py  drawdown.py  performance.py  returns.py  sharpe.py  sqn.py  trade_analyzer.py  transactions.py
bucktrader/feeds/: __init__.py
bucktrader/filters/: __init__.py  calendardays.py  heikinashi.py  renko.py  replay.py  resample.py  session.py
bucktrader/indicators/: __init__.py  basicops.py  matype.py  oscillators.py  other.py  trend.py  volatility.py  volume.py
bucktrader/observers/: __init__.py  benchmark.py  broker_obs.py  buysell.py  drawdown_obs.py  fundvalue.py  timereturn_obs.py  trades_obs.py
bucktrader/sizers/: __init__.py
bucktrader/stores/: __init__.py  base.py  ib.py  live.py  oanda.py
bucktrader/writers/: __init__.py
docs/: 01-overview.md  02-lines-system.md  03-component-model.md  04-cortex.md  06-strategies.md  07-indicators.md  09-analyzers-observers.md  10-live-trading.md  11-plotting.md  12-error-handling.md  examples.md  getting-started.md  index.md  optimization.md  quickstart.md
docs/api/: analyzer.md  broker.md  (+8 more)
examples/: README.md  buy_and_hold.py  macd_strategy.py  multi_data.py  optimization.py  rsi_mean_reversion.py  sma_crossover.py
tests/: conftest.py
(+35 files in other folders)
